# ksu-app

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE_zh.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsr.config.json  vite.config.ts
.claude/: settings.local.json
docs/: JWXT_API_ENDPOINTS.md  JWXT_API_REFERENCE.md  JWXT_LOGIN_FLOW.md  JWXT_SSO_AUTH_FLOW.md  PORTAL_API_ENDPOINTS.md
scripts/: generate_icons.py  generate_icons_white_bg.py
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: login.rs  mod.rs  proxy.rs
src/components/: app-shell.tsx  app-top-nav.tsx  home-search.tsx  page-header.tsx  theme-toggle.tsx
src/components/layout/: app-nav.ts  app-sidebar.tsx
src/components/login/: login-form.tsx
src/components/ui/: sidebar.tsx
src/hooks/: use-login.ts  use-sidebar-collapsed.ts
src/lib/: auth.ts  calendar.ts  grades.ts  requester-bridge.ts  theme.ts
src/lib/api/: client.ts  ksu.ts  proxy.ts
src/lib/auth/: service.ts
src/pages/: calendar.tsx  grades.tsx  home.tsx  login.tsx
src/routes/: __root.tsx  calendar.tsx  grades.tsx  home.tsx  index.tsx  login.tsx
tests/: ksu_auth.py  ksu_grades.py
