[package]
name = "ksu-app"
version = "0.0.1"
description = "A unified portal integrating multiple campus systems for Kashgar University"
authors = ["wangxu"]
edition = "2021"

[lib]
name = "ksu_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.12", features = ["json"] }
garde = { version = "0.20", features = ["derive", "regex"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tauri-plugin-store = "2.4.2"
regex = "1.12.2"
lazy_static = "1.5.0"
urlencoding = "2.1.3"
base64 = "0.22.1"
